/*
 * Copyright 2014 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package com.google.openbidder.api.openrtb;
option java_outer_classname = "ObExt";

import "openrtb.proto";

//
// Common Extensions for the OpenRTB model (ID=100).
//

/**
 * Common extensions for the Impression object.
 */
extend com.google.openrtb.BidRequest.Imp {
  /**
   * Pretargeted campaign IDs or similar.
   */
  repeated string impCid = 150;
}

/**
 * URL parameter.
 */
message UrlParameter {
  /**
   * Parameter name.
   */
  required string name = 1;
  /**
   * Parameter value.
   */
  required string value = 2;
}

/**
 * Common extensions for the Bid object.
 */
extend com.google.openrtb.BidResponse.SeatBid.Bid {
  /**
   * The click-through URL, and any other URLs visible in the rendered ad.
   * If the destination exchange only allows a single clickthrough URL to be
   * declared, the first element here will be used and all others ignored.
   */
  repeated string bidClickThroughUrl = 150;
  /**
   * Parameters that will be added to {@code SnippetMacros.IMPRESSION_URL}.
   */
  repeated UrlParameter bidImpressionParameter = 151;
  /**
   * Parameters that will be added to {@code SnippetMacros.CLICK_URL}.
   */
  repeated UrlParameter bidClickParameter = 152;
}
